--- a/ExtensionsPlatform.UnitTest/ExtensionsPlatform.UnitTest.csproj
+++ b/ExtensionsPlatform.UnitTest/ExtensionsPlatform.UnitTest.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Triggers\Timer\**" />
+    <EmbeddedResource Remove="Triggers\Timer\**" />
+    <None Remove="Triggers\Timer\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
     <PackageReference Include="Moq" Version="4.18.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
@@ -22,10 +28,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ExtensionsPlatform\ExtensionsPlatform.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Triggers\Timer\" />
   </ItemGroup>
 
 </Project>
